@@ -1,3 +1,7 @@
+2009-07-06  Christopher Faylor  <me+cygwin@cgf.cx>
+
+	* dtable.cc (handle_to_fn): Detect failing NtQueryObject.
+
 2009-07-06  Corinna Vinschen  <corinna@vinschen.de>
 
 	* autoload.cc: Delete stray CR.
